refactor: implement Optional for existence checks, extract validation methods, fix popular films